deploy da versão 1.0

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/loader.js",
   "scripts": {
+    "start": "node src/loader.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon",
     "production": "pm2 start src/loader.js --name chat_api"
